subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_2.while
null f(bool x) {
    return x;
}